log
Sat 11 May 2024 04:37:50 PM UTC: 
 tests:  1|8
total_score: 0/70
5bb527d
Sat 11 May 2024 04:43:49 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6a01767
Sat 11 May 2024 05:12:26 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
fb3d26a
Sat 11 May 2024 05:14:05 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a3deb58
Sat 11 May 2024 05:16:09 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
fe35537
Sat 11 May 2024 05:53:18 PM UTC: 
 treemap.c | 37 ++++++++++++++++---------------------
 1 file changed, 16 insertions(+), 21 deletions(-)
 tests:  0|0
9e3b641
Sat 11 May 2024 05:55:13 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
fdfcbce
Sat 11 May 2024 06:01:01 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
2e7b55e
Sat 11 May 2024 06:02:24 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:11: error: unused variable ‘auxPair’ [-Werror=unused-variable]
   64 |     Pair* auxPair = aux->pair;
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7de29bb
Sat 11 May 2024 06:04:19 PM UTC: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:68:15: error: unused variable ‘auxPair’ [-Werror=unused-variable]
   68 |         Pair* auxPair = aux->pair;
      |               ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1782b37
Sat 11 May 2024 06:04:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
f8a889a
Sat 11 May 2024 06:12:43 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
64a815f
Sat 11 May 2024 06:13:52 PM UTC: 
 treemap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  6|6
total_score: 15/70
4b31361
Sat 11 May 2024 06:28:22 PM UTC: 
 treemap.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
 tests:  7|6
total_score: 15/70
445caef
Sat 11 May 2024 06:28:54 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|6
total_score: 15/70
d51177f
Sat 11 May 2024 06:32:57 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
a2efa51
Sat 11 May 2024 06:33:37 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:135:1: error: control reaches end of non-void function [-Werror=return-type]
  135 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ba964d1
Sat 11 May 2024 06:34:15 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
3b6ebe8
Sat 11 May 2024 06:39:17 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
01dd390
Sat 11 May 2024 07:23:05 PM UTC: 
 treemap.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 tests:  16|4
total_score: 30/70
e47e2e5
Sat 11 May 2024 07:24:36 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
b441f08
Sat 11 May 2024 07:25:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
6f65918
Sat 11 May 2024 07:27:33 PM UTC: 
 treemap.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
 tests:  16|4
total_score: 30/70
e407ea5
Sat 11 May 2024 07:29:09 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
82b46aa
Sat 11 May 2024 07:30:06 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  16|4
total_score: 30/70
0385184
Sat 11 May 2024 07:32:16 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
ba8e84e
Sat 11 May 2024 07:55:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
ba962af
Sat 11 May 2024 07:56:12 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
07e211c
Sat 11 May 2024 07:58:39 PM UTC: 
 treemap.c | 26 +++-----------------------
 1 file changed, 3 insertions(+), 23 deletions(-)
 tests:  17|4
total_score: 35/70
16b3d08
Sat 11 May 2024 08:12:05 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
d8ee6a5
Sat 11 May 2024 08:16:46 PM UTC: 
 treemap.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  17|4
total_score: 35/70
2a09372
Sat 11 May 2024 08:25:02 PM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  17|4
total_score: 35/70
c6bb448
Sat 11 May 2024 08:31:26 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
501816e
Sat 11 May 2024 08:34:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
b4d768e
Sat 11 May 2024 08:40:43 PM UTC: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  17|4
total_score: 35/70
c47d6bc
Sat 11 May 2024 08:44:51 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
7155c49
Sat 11 May 2024 08:48:57 PM UTC: 
 treemap.c | 42 +++++++++++++++++++++++++++++++++++-------
 1 file changed, 35 insertions(+), 7 deletions(-)
 tests:  18|3
total_score: 40/70
aa70c9b
Sat 11 May 2024 08:49:55 PM UTC: 
 treemap.c | 36 +-----------------------------------
 1 file changed, 1 insertion(+), 35 deletions(-)
In file included from test.c:4:
treemap.c:156:3: error: expected identifier or ‘(’ before ‘/’ token
  156 | }*/
      |   ^
Compilation failed
37c595f
Sat 11 May 2024 08:50:04 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
39037af
Sat 11 May 2024 08:50:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
3ca8dda
Sat 11 May 2024 08:54:35 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  17|4
total_score: 35/70
2984dbd
Sat 11 May 2024 08:55:19 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
5eb5f14
Sat 11 May 2024 08:56:16 PM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  18|3
total_score: 40/70
f1c0b3c
Sat 11 May 2024 08:58:38 PM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  17|4
total_score: 35/70
dd90a97
Sat 11 May 2024 08:59:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
ff26e83
Sat 11 May 2024 09:09:03 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
becfb80
Sat 11 May 2024 09:09:24 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
ea0c484
Sat 11 May 2024 09:26:13 PM UTC: 
 treemap.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
561eef3
Sat 11 May 2024 09:27:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
1a8628a
